# platform.core.uifw.libslp-utilx

./: AUTHORS  CMakeLists.txt  COPYING  LICENSE.APLv2  NOTICE  utilX.h  utilX.pc  utilX.pc.in  utilX_ext.h  util_x11.h  x11.c
TC/: _export_env.sh  config
TC/testcase/: Makefile  tslist  utc_utilx_key_grab_test.c  utc_utilx_notification_level_test.c  utc_utilx_opaque_test.c  utc_utilx_screen_shot_test.c  utc_utilx_test.c
debian/: README  README.Debian  changelog  control  copyright  rules
doc/: ui_utilx_doc.h
packaging/: libslp-utilx.changes  libslp-utilx.spec
